tests/pos/i4854.scala
class C {
  def f(x: Int): Unit = ()
  val f: String => Unit = s => ()
  f("a")
}