tests/neg/toplevel-doubledef/defs_1.scala
def hello(x: String): Unit =
  println(s"hello: $x")